# modern-cryptography-kata

./: README.md  modern-cryptography-kata.cabal
agda/: agda-modern-crypto-kata.agda-lib
agda/src/Crypto/Algebra/: F17.agda
haskell-crypto-kata/: CHANGELOG.md  LICENSE  modern-cryptography-kata.cabal
haskell-crypto-kata/src/Crypto/Kata/: Field.hs
haskell-crypto-kata/test/: Main.hs
haskell-crypto-kata/test/Crypto/Kata/: FieldSpec.hs
scala-crypto-kata/: build.sbt
scala-crypto-kata/project/: plugins.sbt
scala-crypto-kata/src/jmh/scala/crypto/kata/: BatchInversionBenchmark.scala  MsmBenchmark.scala
scala-crypto-kata/src/main/scala/crypto/kata/: Curve.scala  Field.scala  GroupUtil.scala  Msm.scala  Pedersen.scala  ProjectivePoint.scala  ScalarMult.scala
scala-crypto-kata/src/test/scala/crypto/kata/: CurveSpec.scala  ExtendedEuclideanSpec.scala  FieldSpec.scala  MsmSpec.scala  PedersenSpec.scala  ProjectivePointSpec.scala  ScalarMultSpec.scala
