cabal-version:      3.4
name:               advanced-crypto-tiny-programs
version:            0.1.0.0
build-type:         Simple
license:            BSD-3-Clause
author:             Piotr Paradzinski
maintainer:         piotr.paradzinski@gmail.com
synopsis:           Modern cryptography katas with executable properties
category:           Cryptography, Education

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints

library
  import:           warnings
  exposed-modules:
    Crypto.Kata.Field
  hs-source-dirs:   src
  build-depends:
      base >=4.18 && <5
  default-language: GHC2021

test-suite field-laws
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:
      test
  other-modules:
      Crypto.Kata.FieldSpec
  build-depends:
      base
    , advanced-crypto-tiny-programs
    , tasty
    , tasty-quickcheck
    , QuickCheck
  default-language: GHC2021
